updating add and edit methods for account manager assignment grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44410

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Extensions/AccountManager/Templates/AccountManagerAccountManagerAssignmentGrid.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Extensions/AccountManager/Templates/AccountManagerAccountManagerAssignmentGrid.html
@@ -4,7 +4,7 @@
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              enableautoexport="true">
-    <vr-datagridcolumn headertext="'AssignmentDefinitionId'" field="'AccountManagerAssignementDefinitionId'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'EED'" field="'EED'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'AccountName'" field="'AccountName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Date'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'EED'" field="'EED'" type="'Date'"></vr-datagridcolumn>
 </vr-datagrid>
