deleting accountManagerAssignmentDetail and accountManagerAssignmentQuery classes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44414

--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerDefinitionGridTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerDefinitionGridTemplate.html
@@ -1,5 +1,6 @@
 ﻿<vr-button type="Add" data-onclick="addNewAssignmentDefinition" standalone></vr-button>
 <vr-datagrid datasource="assignmentDefinitions"
+             ondeleterow="removerow"
              on-ready="onGridReady"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
