orderBy duration desc
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44415

--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Reports/Analytics/rdlRoutingAnalysis.rdlc
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Reports/Analytics/rdlRoutingAnalysis.rdlc
@@ -2093,7 +2093,8 @@
                   </Group>
                   <SortExpressions>
                     <SortExpression>
-                      <Value>=Fields!SaleZone.Value</Value>
+                      <Value>=Sum(Fields!Duration.Value, "RoutingAnalysis")</Value>
+                      <Direction>Descending</Direction>
                     </SortExpression>
                   </SortExpressions>
                   <TablixMembers>
