--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Views/Dialogs/NewCodeDialog.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Views/Dialogs/NewCodeDialog.html
@@ -5,7 +5,7 @@
 
                 <vr-columns width="1/2row">
                     <vr-label>Code</vr-label>
-                    <vr-textbox value="codeValue" minvalue="0" decimalprecision="0" type="number" onvaluechanged="onCodeValueChange"></vr-textbox>
+                    <vr-textbox value="codeValue" type="text" onvaluechanged="onCodeValueChange"></vr-textbox>
                     <!--<vr-validator validate="ValidateCodes()">
 
                     </vr-validator>-->
