--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AccountManagerEditor.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AccountManagerEditor.html
@@ -6,7 +6,7 @@
                 <vr-tab header="'Definition'">
                     <vr-row>
                         <vr-columns colnum="4">
-                            <vr-sec-user-selector on-ready="scopeModel.onUserSelectorReady" normal-col-num="2"></vr-sec-user-selector>
+                            <vr-sec-user-selector on-ready="scopeModel.onUserSelectorReady" normal-col-num="2" isrequired="true"></vr-sec-user-selector>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>                
