--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/AccountManager/AccountManagerAssignmentEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/AccountManager/AccountManagerAssignmentEditor.html
@@ -4,15 +4,15 @@
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row>
-                        <vr-columns colnum="3">
-                            <span vr-disabled="scopeModel.disable">
-                                <retail-be-account-selector on-ready="scopeModel.onAccountSelectorReady" isrequired="true" ismultipleselection="true"></retail-be-account-selector>
-                            </span>
+                        <vr-columns colnum="4">
+                            <vr-row>
+                                <span vr-disabled="scopeModel.disable">
+                                    <retail-be-account-selector on-ready="scopeModel.onAccountSelectorReady" isrequired="true" ismultipleselection="true"></retail-be-account-selector>
+                                </span>
+                            </vr-row>
+                            <vr-directivewrapper directive="scopeModel.assignmentRuntime" on-ready="scopeModel.onRuntimeDirectiveReady" normal-col-num="4" isrequired="ctrl.isrequired"></vr-directivewrapper>
                         </vr-columns>
                     </vr-row>
-                </vr-tab>
-                <vr-tab header="'Setting'">
-
                 </vr-tab>
                 <vr-tab header="'Time'">
                     <vr-row>
