Update Code Group, Add Name
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44475

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/CodeGroup/Templates/CodeGroupGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/CodeGroup/Templates/CodeGroupGridTemplate.html
@@ -7,6 +7,7 @@
              idfield="Entity.CodeGroupId" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'ID'" field="'Entity.CodeGroupId'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Code Group'" field="'Entity.Code'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Country'" field="'CountryName'" type="'Text'" ng-if="!hidecountrycolumn"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
