--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CodeGroup/CodeGroupEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CodeGroup/CodeGroupEditor.html
@@ -3,7 +3,7 @@
         <vr-form name="formCountryEditor">
             <vr-row ng-hide="hideEditorController" removeline>
                 <vr-columns width="1/2row">
-                    <vr-textbox type="number" minvalue="0" decimalprecision="0" value="code" label="Code Group" isrequired></vr-textbox>
+                    <vr-textbox value="name" label="Name" isrequired></vr-textbox>
                 </vr-columns>
                 <span vr-disabled="disableCountry">
                     <vr-columns width="1/2row" haschildcolumns>
@@ -11,6 +11,11 @@
                     </vr-columns>
                 </span>
             </vr-row >
+            <vr-row ng-hide="hideEditorController" removeline>
+                <vr-columns width="1/2row">
+                    <vr-textbox type="number" minvalue="0" decimalprecision="0" value="code" label="Code Group" isrequired></vr-textbox>
+                </vr-columns>
+            </vr-row>
             <vr-row ng-show="hideEditorController">
                 <vr-label>{{msgOfConnotEdit}}</vr-label>
                 </vr-row>
