updating the validation on BED and EED while inserting or updataing account manager assignment
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44482

--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerGrid.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerGrid.html
@@ -8,5 +8,6 @@
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
     </vr-datagridexpandablerow>
+    <vr-datagridcolumn headertext="'Account Manager Id'" field="'AccountManagerId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'User Name'" field="'UserName'" type="'Text'"></vr-datagridcolumn>
 </vr-datagrid>
