Prevented the user from modifying the BED of the rates that are explicitly defined for the zones of countries to sell
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44492

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/OtherRate/Templates/OtherRateGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/OtherRate/Templates/OtherRateGridTemplate.html
@@ -36,7 +36,7 @@
 			</vr-datagridcolumn>
 
 			<vr-datagridcolumn headertext="'BED'" widthfactor="10">
-				<span vr-disabled="viewScope.isCountryEnded || viewScope.isZonePendingClosed">
+				<span vr-disabled="viewScope.isCountryEnded || viewScope.isZonePendingClosed || viewScope.isCountryNew">
 					<span vr-disabled="!viewScope.areOtherRatesEditable()">
 						<span vr-disabled="dataItem.CurrentRate != null">
 							<vr-datetimepicker type="date" value="dataItem.CurrentRateBED" ng-hide="dataItem.NewRate != null"></vr-datetimepicker>
