--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/FutureRate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/FutureRate.html
@@ -5,7 +5,10 @@
                 <vr-columns width="1/2row">
                     <vr-label>Rate: </vr-label>
                     <vr-label isvalue="true">{{scopeModel.rate | number: 4}}</vr-label>
-                    <vr-icon inline icontype="scopeModel.futureRateIconType" tooltip="scopeModel.futureRateIconTooltip"></vr-icon>
+                    <span><vr-icon inline icontype="scopeModel.futureRateIconType" tooltip="scopeModel.futureRateIconTooltip"></vr-icon></span>
+                    <span>
+                        <vr-icon icontype="scopeModel.rateChangeType.iconType" iconurl="scopeModel.rateChangeType.iconUrl" tooltip="scopeModel.rateChangeType.description"></vr-icon>
+                    </span>
                 </vr-columns>
                 <vr-columns width="1/2row">
                     <vr-label>BED: </vr-label>
