adding Id column to account manager assignment grid and validation for BED and EED in account manager assignment editor controller
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44509

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Extensions/AccountManager/Templates/AccountManagerAccountManagerAssignmentGrid.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Extensions/AccountManager/Templates/AccountManagerAccountManagerAssignmentGrid.html
@@ -4,6 +4,7 @@
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              enableautoexport="true">
+    <vr-datagridcolumn headertext="'ID'" field="'AccountManagerAssignementId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Account Name'" field="'AccountName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Date'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'EED'" field="'EED'" type="'Date'"></vr-datagridcolumn>
