--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/AccountManager/AccountManagerAssignmentEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/AccountManager/AccountManagerAssignmentEditor.html
@@ -22,10 +22,12 @@
                 <vr-tab header="'Time'">
                     <vr-row>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker label="Begin Effective Date" value="scopeModel.bed" type="date" isrequired="true"></vr-datetimepicker>
+                            <span vr-loader="scopeModel.isBeginEffectiveDateLoading">
+                                <vr-datetimepicker type="dateTime" value="scopeModel.beginEffectiveDate" label="BED" customvalidate="scopeModel.validateEffectiveDate()" isrequired></vr-datetimepicker>
+                            </span>
                         </vr-columns>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker label="End Effective Date" value="scopeModel.eed" type="date"></vr-datetimepicker>
+                            <vr-datetimepicker type="dateTime" value="scopeModel.endEffectiveDate" label="EED" customvalidate="scopeModel.validateEffectiveDate()"></vr-datetimepicker>
                         </vr-columns>
                     </vr-row>
                     <vr-row>
