--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AccountManagerEditor.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AccountManagerEditor.html
@@ -2,19 +2,19 @@
     <vr-modalbody>
         <vr-form name="formFilter">
             <vr-tabs>
-                
+
                 <vr-tab header="'Definition'">
                     <vr-row>
                         <vr-columns colnum="4">
                             <vr-sec-user-selector on-ready="scopeModel.onUserSelectorReady" normal-col-num="2" isrequired="true"></vr-sec-user-selector>
                         </vr-columns>
                     </vr-row>
-                </vr-tab>                
-                <vr-tab header="'Setting'">
-                    <span ng-if="scopeModel.runtimeEditor != undefined">
-                        <vr-directivewrapper directive="scopeModel.runtimeEditor" on-ready="scopeModel.onDirectiveReady" normal-col-num="4" isrequired="ctrl.isrequired"></vr-directivewrapper>
+                    <vr-row>
+                        <span ng-if="scopeModel.runtimeEditor != undefined">
+                            <vr-directivewrapper directive="scopeModel.runtimeEditor" on-ready="scopeModel.onDirectiveReady" normal-col-num="4" isrequired="ctrl.isrequired"></vr-directivewrapper>
                         </span>
-</vr-tab>
+                    </vr-row>
+                </vr-tab>
             </vr-tabs>
         </vr-form>
     </vr-modalbody>
