- added IsTemp and Settings to VRFile - started VRLocalization
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44514

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRDocument/Templates/VRDocumentGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRDocument/Templates/VRDocumentGridTemplate.html
@@ -5,7 +5,7 @@
              on-ready="onGridReady">
 
     <vr-datagridcolumn headertext="'Attachment'" disablesorting="true" widthfactor="15">
-        <vr-fileupload extension="doc,dot,wbk,docx,docm,dotx,dotm,dotm,xls,xlt,xlm,xlsx,xlsm,xltx,xltm,ppt,pot,pps,pptx,pptm,potx,potm,ppam,ppsx,ppsm,sldx,sldm,accdb,accde,accdt,accdr,jpeg,jfif,gif,png,zip,zipx,pdf"
+        <vr-fileupload tempfile="true" extension="doc,dot,wbk,docx,docm,dotx,dotm,dotm,xls,xlt,xlm,xlsx,xlsm,xltx,xltm,ppt,pot,pps,pptx,pptm,potx,potm,ppam,ppsx,ppsm,sldx,sldm,accdb,accde,accdt,accdr,jpeg,jfif,gif,png,zip,zipx,pdf"
                        value="dataItem.Entity.documentAttachment" isrequired="true">
         </vr-fileupload>
     </vr-datagridcolumn>
