--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPBusinessRuleSet/Templates/BPBusinessRuleSetGridTemplate.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPBusinessRuleSet/Templates/BPBusinessRuleSetGridTemplate.html
@@ -3,7 +3,7 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
-             idfield="Entity.BPBusinessRuleSetId">
+             idfield="Entity.BPBusinessRuleSetId" normalcell="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.BPBusinessRuleSetId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Process'" field="'BPDefinition'" type="'Text'"></vr-datagridcolumn>
