--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPDefinition/Templates/BPDefinitionGridTemplate.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPDefinition/Templates/BPDefinitionGridTemplate.html
@@ -6,7 +6,7 @@
              idfield="Entity.BPDefinitionID">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.BPDefinitionID'" type="'Text'" widthfactor="3"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Process'" field="'Entity.Title'" type="'Text'" widthfactor="20"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Running Process'" field="'RunningProcessNumber'" type="'Number'" numberprecision="'NoDecimal'" fixedwidth="150" isfielddynamic="true"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Running Processes'" field="'RunningProcessNumber'" type="'Number'" numberprecision="'NoDecimal'" fixedwidth="150" isfielddynamic="true"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Last Process Time'" field="'LastProcessCreatedTime'" type="'Datetime'" fixedwidth="150" isfielddynamic="true"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
